--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev":"nodemon index.js",
+    "test":"echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/johnpaul470/react-web-shopee-clone/issues"
   },
-  "homepage": "https://github.com/johnpaul470/react-web-shopee-clone#readme"
+  "homepage": "https://github.com/johnpaul470/react-web-shopee-clone#readme",
+  "dependencies": {
+    "express": "^4.16.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.9"
+  }
 }
